--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
+:root {
+  --primary: #4988C4;
+  --bg-light: #f8fbff;
+  --history-bg: #e3f2fd;
+  --text-main: #333;
+  --shadow: rgba(0, 0, 0, 0.1);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+  display: flex;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.calculator-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 300px;
+  height: 400px;
+  margin: auto;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-container {
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-row-gap: 0px;
+  grid-column-gap: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.display-text {
+  height: 50px;
+  margin: 15px 0;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid var(--text-main);
+  text-align: right;
+  font-size: 2em;
+}
+
+.display-text:focus,
+.display-text:active{
+  border-bottom: 1px solid var(--primary);
 }
